--- a/工程化/模块化/webpack/index.html
+++ b/工程化/模块化/webpack/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-
+  <h3>
+    <%= htmlWebpackPlugin.options.title %>
+  </h3>
+  <h4>author:
+    <%= htmlWebpackPlugin.options.author %>
+  </h4>
+  <div id="app"></div>
 </body>
-<script src="./dist/index.js"></script>
 
 </html>
